unpackaged/main/default/objects/Service_Detail__c/Service_Detail__c.object-meta.xml
<CustomObject>
    <label>Service Detail</label>
    <nameField>
        <displayFormat>Service - {00000}</displayFormat>
        <label>Service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>