unpackaged/main/default/objects/Service_Detail__c/fields/Appeared_Date__c.field-meta.xml
<CustomField>
    <fullName>Appeared_Date__c</fullName>
    <label>Appeared Date</label>
    <type>Date</type>
</CustomField>