unpackaged/main/default/objects/Service_Detail__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matters (Attorney)</relationshipLabel>
    <relationshipName>Service_Details</relationshipName>
    <type>Lookup</type>
</CustomField>