unpackaged/main/default/objects/Service_Detail__c/fields/Attorney_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Contact_Information__c</fullName>
    <label>Attorney Contact Information</label>
    <type>TextArea</type>
</CustomField>