unpackaged/main/default/objects/Service_Detail__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Service Details</relationshipLabel>
    <relationshipName>Service_Details</relationshipName>
    <type>Lookup</type>
</CustomField>