unpackaged/main/default/objects/Service_Detail__c/fields/Method_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Service__c</fullName>
    <label>Method of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Substituted</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>